--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +22,10 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "@types/jest": "^29.5.10",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -30,14 +35,24 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
+  },
+  "jest":{
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "src/setup.jest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "angularjest\node_modules"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "angularjest\tsconfig.spec.json"
+      }
+    }
   }
+  
+   
+
 }
